NEW: page compare added

--- a/tweetsent/templates/classifiers.html
+++ b/tweetsent/templates/classifiers.html
@@ -48,6 +48,22 @@
         <option>
           QuadraticDiscriminantAnalysis()
         </option>
+        <option>
+          LinearSVC()
+        </option>
+        <option>
+          MultinomialNB()
+        </option>
+        <option>
+          Perceptron()
+        </option>
+        <option>
+          PassiveAggressiveClassifier()
+        </option>
+        <option>
+          NearestCentroid()
+        </option>
+        <option>
       </select>
       <br>
       <br>
