--- a/tweetsent/templates/tweets.html
+++ b/tweetsent/templates/tweets.html
@@ -66,9 +66,25 @@
 </table>
 
 <h1>Graphs</h1>
-<canvas id="myChart" width="400" height="400"></canvas>
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-sm-4">
+        <canvas id="bars" width="400" height="400"></canvas>
+      </div>
+      <div class="col-sm-4">
+        <canvas id="bars2" width="400" height="400"></canvas>
+      </div>
+
+      <div class="col-sm-4">
+        <canvas id="pie" width="400" height="400"></canvas>
+      </div>
+    </div>
+</div>
+<script src="https://codepen.io/anon/pen/aWapBE.js"></script>
 <script>
-var ctx = document.getElementById("myChart").getContext('2d');
+var ctx = document.getElementById("bars").getContext('2d');
+var plt = palette('tol', parseInt({{data|length}}));
+
 var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
@@ -78,9 +94,9 @@ var myChart = new Chart(ctx, {
             {
             label: 'CL{{i}}',
             data: {{data[i]}},
-            borderWidth: 1
+            backgroundColor: "#"+plt[{{i}}]
         }
-        {% if i < result[0][1]|length -1 %}
+        {% if i < data|length -1 %}
         {{','}}
         {% endif %}
         {% endfor %}
@@ -93,6 +109,72 @@ var myChart = new Chart(ctx, {
                     beginAtZero:true
                 }
             }]
+        },
+        title: {
+            display: true,
+            text: 'Tweets sentiment, 1 is negative, 5 is positive.'
+        }
+    }
+});
+</script>
+
+<script>
+var ctx = document.getElementById("bars2").getContext('2d');
+var plt = palette('tol', parseInt({{avgs|length}}));
+
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: {{labels}},
+        datasets: [
+            {
+            label: 'Negative',
+            data: {{avgs[0]}},
+            backgroundColor: "#"+plt[0]
+        },
+        {
+        label: 'Positive',
+        data: {{avgs[1]}},
+        backgroundColor: "#"+plt[1]
+    }
+      ]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero:true
+                }
+            }]
+        },
+        title: {
+            display: true,
+            text: 'Tweets last scroe based on our formula for average accuracy'
+        }
+    }
+});
+</script>
+
+<script>
+var ctx = document.getElementById("pie").getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'pie',
+    data: {
+        labels: ['Negative','Positive','Neutral'],
+        datasets: [
+            {
+            data: {{sents}},
+            backgroundColor: [
+                  'rgba(255, 99, 132, 0.2)',
+                  'rgba(54, 162, 235, 0.2)',
+                  'rgba(255, 206, 86, 0.2)']
+          }
+      ]
+    },
+    options: {
+        title: {
+            display: true,
+            text: 'Overal Sentiment score'
         }
     }
 });
