--- a/tweetsent/templates/base.html
+++ b/tweetsent/templates/base.html
@@ -22,6 +22,9 @@
               <a class="nav-link" href="/tweets">Tweets</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/compare">Compare</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/classifiers">Classifiers</a>
             </li>
           </ul>
